--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     </script>
   </head>
   <body>
+    <!-- Initial preloader to prevent white screen -->
+    <div id="initial-preloader">
+      <div class="simple-loader">Loading EchoVerse...</div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
