--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
         </filter>
         
         <filter id="subtle-grain" x="0%" y="0%" width="100%" height="100%">
-          <feTurbulence baseFrequency="0.9" numOctaves="4" result="noise" seed="5"/>
+          <feTurbulence baseFrequency="1.2" numOctaves="5" result="noise" seed="5"/>
           <feColorMatrix in="noise" type="saturate" values="0"/>
           <feComponentTransfer in="noise" result="grain">
-            <feFuncA type="discrete" tableValues="0.02 0.04 0.06 0.08"/>
+            <feFuncA type="discrete" tableValues="0.05 0.1 0.15 0.2 0.25"/>
           </feComponentTransfer>
           <feBlend in="SourceGraphic" in2="grain" mode="overlay"/>
+        </filter>
+        
+        <filter id="heavy-grain" x="0%" y="0%" width="100%" height="100%">
+          <feTurbulence baseFrequency="1.5" numOctaves="6" result="noise" seed="7"/>
+          <feColorMatrix in="noise" type="saturate" values="0"/>
+          <feComponentTransfer in="noise" result="grain">
+            <feFuncA type="discrete" tableValues="0.1 0.2 0.3 0.4 0.5 0.6"/>
+          </feComponentTransfer>
+          <feBlend in="SourceGraphic" in2="grain" mode="multiply"/>
         </filter>
       </defs>
     </svg>
